--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -110,97 +110,123 @@
                         android:text="@string/star_rating"
                         android:textColor="@color/hotels_primary_color" />
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
+                    <android.support.v7.widget.CardView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
+                        android:layout_gravity="center"
                         android:layout_marginTop="15dp"
-                        android:fillViewport="true">
+                        app:cardCornerRadius="3dp"
+                        app:cardElevation="1dp">
 
-                        <android.support.v7.widget.CardView
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:cardCornerRadius="3dp"
-                            app:cardElevation="1dp">
+                            android:layout_gravity="center"
+                            android:gravity="center_vertical|center"
+                            android:orientation="horizontal">
 
                             <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
+                                android:id="@+id/rating_one_background"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent">
                                 <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_one"
                                     style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:padding="10dp"
-                                    android:numStars="5"
-                                    android:stepSize="0.5"
-                                    android:layout_weight="1" />
+                                    android:isIndicator="true"
+                                    android:layout_margin="10dp"
+                                    android:numStars="1"
+                                    android:rating="1"
+                                    android:stepSize="1" />
+                            </LinearLayout>
 
-                                <View
-                                    android:layout_width="1px"
-                                    android:layout_height="match_parent"
-                                    android:background="@color/divider_grey" />
+                            <View
+                                android:layout_width="1px"
+                                android:layout_height="match_parent"
+                                android:background="@color/divider_grey" />
 
+                            <LinearLayout
+                                android:id="@+id/rating_two_background"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent">
                                 <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_two"
                                     style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:padding="10dp"
-                                    android:numStars="5"
-                                    android:stepSize="0.5"
-                                    android:layout_weight="1" />
+                                    android:isIndicator="true"
+                                    android:layout_margin="10dp"
+                                    android:numStars="2"
+                                    android:rating="2"
+                                    android:stepSize="1" />
+                            </LinearLayout>
 
-                                <View
-                                    android:layout_width="1px"
-                                    android:layout_height="match_parent"
-                                    android:background="@color/divider_grey" />
+                            <View
+                                android:layout_width="1px"
+                                android:layout_height="match_parent"
+                                android:background="@color/divider_grey" />
 
+                            <LinearLayout
+                                android:id="@+id/rating_three_background"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent">
                                 <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_three"
                                     style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:padding="10dp"
-                                    android:numStars="5"
-                                    android:stepSize="0.5"
-                                    android:layout_weight="1" />
+                                    android:layout_margin="10dp"
+                                    android:isIndicator="true"
+                                    android:numStars="3"
+                                    android:rating="3"
+                                    android:stepSize="1" />
+                            </LinearLayout>
 
-                                <View
-                                    android:layout_width="1px"
-                                    android:layout_height="match_parent"
-                                    android:background="@color/divider_grey" />
+                            <View
+                                android:layout_width="1px"
+                                android:layout_height="match_parent"
+                                android:background="@color/divider_grey" />
 
+                            <LinearLayout
+                                android:id="@+id/rating_four_background"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent">
                                 <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_four"
                                     style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:padding="10dp"
-                                    android:numStars="5"
-                                    android:stepSize="0.5"
-                                    android:layout_weight="1" />
+                                    android:layout_margin="10dp"
+                                    android:isIndicator="true"
+                                    android:numStars="4"
+                                    android:rating="4"
+                                    android:stepSize="1" />
+                            </LinearLayout>
 
-                                <View
-                                    android:layout_width="1px"
-                                    android:layout_height="match_parent"
-                                    android:background="@color/divider_grey" />
+                            <View
+                                android:layout_width="1px"
+                                android:layout_height="match_parent"
+                                android:background="@color/divider_grey" />
 
+                            <LinearLayout
+                                android:id="@+id/rating_five_background"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent">
                                 <RatingBar
                                     android:id="@+id/filter_hotel_star_rating_five"
                                     style="@style/RatingBar.UserReview.Material.Green"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:padding="10dp"
+                                    android:layout_margin="10dp"
+                                    android:isIndicator="true"
                                     android:numStars="5"
-                                    android:stepSize="0.5"
-                                    android:layout_weight="1" />
-
+                                    android:rating="5"
+                                    android:stepSize="1" />
                             </LinearLayout>
-                        </android.support.v7.widget.CardView>
-                    </RelativeLayout>
+
+                        </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
                     <TextView
                         android:id="@+id/vip_badge"
@@ -291,7 +317,6 @@
                     </android.support.v7.widget.CardView>
 
 
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -363,8 +388,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                app:titleTextAppearance="@style/CarsToolbarTitleTextAppearance">
-            </android.support.v7.widget.Toolbar>
+                app:titleTextAppearance="@style/CarsToolbarTitleTextAppearance"></android.support.v7.widget.Toolbar>
 
             <View
                 android:id="@+id/toolbar_dropshadow"
@@ -377,11 +401,11 @@
             android:id="@+id/dynamic_feedback_container"
             android:layout_width="match_parent"
             android:layout_height="36dp"
-            app:cardCornerRadius="18dp"
+            android:layout_gravity="bottom"
             android:layout_margin="16dp"
             android:clickable="true"
-            app:cardPreventCornerOverlap="false"
-            android:layout_gravity="bottom" />
+            app:cardCornerRadius="18dp"
+            app:cardPreventCornerOverlap="false" />
 
     </FrameLayout>
 
