--- a/project/src/main/res/layout/widget_hotel_results.xml
+++ b/project/src/main/res/layout/widget_hotel_results.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_view"
@@ -76,7 +77,29 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_transition_map_list_fab" />
+
+    <!-- Do not be fooled, this textStyle does not yet function - but it's a reminder that we WANT it to do that -->
+    <Button
+        android:id="@+id/search_this_area"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|bottom"
+        android:layout_marginBottom="106dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/hotel_select_room_button_selector"
+        android:drawableLeft="@drawable/ic_material_location_pin"
+        android:drawablePadding="8dp"
+        android:minHeight="0dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="8dp"
+        android:text="@string/Search_this_area"
+        android:textAllCaps="false"
+        android:textColor="@color/hotels_primary_color"
+        android:textSize="12sp"
+        app:textStyle="thin" />
 
 </merge>
