--- a/project/src/main/res/layout/hotel_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/hotel_checkout_summary_widget.xml
@@ -93,86 +93,102 @@
         android:layout_height="1px"
         android:background="@color/hotelsv2_checkout_divider_color" />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/cost_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/hotel_booking_summary"
         android:background="@drawable/cost_breakdown"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingBottom="9dp"
         android:paddingLeft="14dp"
         android:paddingRight="14dp"
         android:paddingTop="9dp">
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/total_tax_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="6dp"
-            android:drawableRight="@drawable/ic_checkout_info"
-            android:gravity="center_vertical"
-            android:text="@string/total_with_tax"
-            android:textColor="@color/hotelsv2_checkout_text_color"
-            android:textSize="11sp"
-            app:textStyle="medium" />
-
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/total_price_with_tax"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/total_tax_label"
-            android:layout_alignTop="@+id/total_tax_label"
-            android:layout_toRightOf="@id/total_tax_label"
-            android:gravity="right|center_vertical"
-            android:textColor="@color/hotelsv2_checkout_text_color"
-            android:textSize="11sp"
-            app:textStyle="medium" />
+            android:orientation="horizontal">
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/fees_paid_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/total_tax_label"
-            android:text="@string/fees_paid_at_hotel"
-            android:textColor="@color/hotelsv2_checkout_text_color"
-            android:textSize="11sp"
-            app:textStyle="medium" />
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/total_tax_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="6dp"
+                android:drawableRight="@drawable/ic_checkout_info"
+                android:gravity="center_vertical"
+                android:text="@string/total_with_tax"
+                android:textColor="@color/hotelsv2_checkout_text_color"
+                android:textSize="11sp"
+                app:textStyle="medium" />
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/total_fees"
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/total_price_with_tax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/total_tax_label"
+                android:layout_alignTop="@+id/total_tax_label"
+                android:layout_toRightOf="@id/total_tax_label"
+                android:gravity="right|center_vertical"
+                android:textColor="@color/hotelsv2_checkout_text_color"
+                android:textSize="11sp"
+                app:textStyle="medium" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/fees_paid_label"
-            android:layout_alignTop="@+id/fees_paid_label"
-            android:layout_toRightOf="@id/fees_paid_label"
-            android:gravity="right|center_vertical"
-            android:textColor="@color/hotelsv2_checkout_text_color"
-            android:textSize="11sp"
-            app:textStyle="normal" />
+            android:orientation="horizontal">
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/amount_due_today_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/total_fees"
-            android:textColor="@color/hotelsv2_checkout_text_color"
-            android:textSize="16sp"
-            app:textStyle="medium" />
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/fees_paid_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fees_paid_at_hotel"
+                android:textColor="@color/hotelsv2_checkout_text_color"
+                android:textSize="11sp"
+                app:textStyle="medium" />
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/total_price_with_tax_and_fees"
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/total_fees"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/fees_paid_label"
+                android:layout_alignTop="@+id/fees_paid_label"
+                android:layout_toRightOf="@id/fees_paid_label"
+                android:gravity="right|center_vertical"
+                android:textColor="@color/hotelsv2_checkout_text_color"
+                android:textSize="11sp"
+                app:textStyle="normal" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/amount_due_today_label"
-            android:layout_alignTop="@+id/amount_due_today_label"
-            android:layout_toRightOf="@id/amount_due_today_label"
-            android:gravity="right|center_vertical"
-            android:textColor="@color/hotels_primary_color"
-            android:textSize="16sp"
-            app:textStyle="medium" />
+            android:orientation="horizontal">
 
-    </RelativeLayout>
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/amount_due_today_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/hotelsv2_checkout_text_color"
+                android:textSize="16sp"
+                android:drawableRight="@drawable/ic_checkout_info"
+                app:textStyle="medium" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/total_price_with_tax_and_fees"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/amount_due_today_label"
+                android:layout_alignTop="@+id/amount_due_today_label"
+                android:layout_toRightOf="@id/amount_due_today_label"
+                android:gravity="right|center_vertical"
+                android:textColor="@color/hotels_primary_color"
+                android:textSize="16sp"
+                app:textStyle="medium" />
+        </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/price_change_container"
