--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -567,47 +567,61 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/hotels_primary_color" />
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:minHeight="?attr/actionBarSize">
+        android:orientation="vertical">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
+            android:layout_gravity="top"
             android:minHeight="?attr/actionBarSize">
 
-            <LinearLayout
-                android:id="@+id/toolbar_two"
+            <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical">
+                android:layout_marginLeft="2dp"
+                android:minHeight="?attr/actionBarSize">
 
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/hotel_name_text"
+                <LinearLayout
+                    android:id="@+id/toolbar_two"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:textColor="@color/itin_white_text"
-                    android:textSize="18sp"
-                    app:textStyle="medium" />
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
 
-                <RatingBar
-                    android:id="@+id/hotel_star_rating_bar"
-                    style="@style/RatingBar.UserReview.Material.Detail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:numStars="5"
-                    android:stepSize=".5" />
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/hotel_name_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:textColor="@color/itin_white_text"
+                        android:textSize="18sp"
+                        app:textStyle="medium" />
 
-            </LinearLayout>
+                    <RatingBar
+                        android:id="@+id/hotel_star_rating_bar"
+                        style="@style/RatingBar.UserReview.Material.Detail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:stepSize=".5" />
 
-        </FrameLayout>
+                </LinearLayout>
 
-    </android.support.v7.widget.Toolbar>
+            </FrameLayout>
+
+        </android.support.v7.widget.Toolbar>
+
+        <View
+            android:id="@+id/toolbar_dropshadow"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_dropshadow_height"
+            android:background="@drawable/tb_shadow"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
 </merge>
