--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -32,6 +32,22 @@
                     android:layout_height="134dp"
                     android:scaleType="centerCrop" />
 
+                <View
+                    android:id="@+id/gradient_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="67dp"
+                    android:layout_gravity="top"
+                    android:background="@drawable/hotel_result_list_gradient_top"
+                    android:scaleType="centerCrop" />
+
+                <View
+                    android:id="@+id/gradient_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="67dp"
+                    android:layout_gravity="bottom"
+                    android:background="@drawable/hotel_result_list_gradient_bottom"
+                    android:scaleType="centerCrop" />
+
                 <LinearLayout
                     android:id="@+id/urgency_message_layout"
                     style="@style/UrgencyMessage"
@@ -68,14 +84,6 @@
                     app:textStyle="medium"
                     android:textColor="#ffffff"
                     android:textSize="9sp" />
-
-                <View
-                    android:id="@+id/gradient"
-                    android:layout_width="match_parent"
-                    android:layout_height="67dp"
-                    android:layout_gravity="bottom"
-                    android:background="@drawable/hotel_result_list_gradient_bottom"
-                    android:scaleType="centerCrop" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -138,6 +146,7 @@
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:paddingTop="3dp"
+                        android:layout_marginBottom="2dp"
                         android:textColor="#ffffff"
                         android:textSize="10sp"
                         app:textStyle="medium" />
