--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -45,6 +45,8 @@
         <item name="skin_ticketSelectorDisabledColor">@color/lx_primary_disabled_color</item>
         <item name="skin_lxResultsBottomPadding">@dimen/lx_results_bottom_padding</item>
         <item name="skin_lxSearchToolbarText">@string/lx_search_title</item>
+        <item name="skin_lxErrorNoResultsText">@string/lx_error_current_location_no_results</item>
+        <item name="skin_lxErrorCurrentLocationText">@string/error_lx_current_location_search_message</item>
     </style>
 
     <style name="V2.Theme.LX.Transport" parent="V2.Theme.LX">
@@ -62,6 +64,8 @@
         <item name="skin_lxResultsBottomPadding">@dimen/gt_results_bottom_padding</item>
         <item name="skin_lxUncheckedToggleTextColor">@color/gt_unchecked_toggle_text_color</item>
         <item name="skin_lxSearchToolbarText">@string/gt_search_title</item>
+        <item name="skin_lxErrorNoResultsText">@string/gt_error_current_location_no_results</item>
+        <item name="skin_lxErrorCurrentLocationText">@string/error_gt_current_location_search_message</item>
     </style>
 
     <!--
