--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -334,5 +334,7 @@
     <attr name="skin_ticketSelectorDisabledColor" format="reference" />
     <attr name="skin_lxResultsBottomPadding" format="reference" />
     <attr name="skin_lxSearchToolbarText" format="reference" />
+    <attr name="skin_lxErrorNoResultsText" format="reference" />
+    <attr name="skin_lxErrorCurrentLocationText" format="reference" />
 
 </resources>
