--- a/project/src/main/res/layout/coupon_widget.xml
+++ b/project/src/main/res/layout/coupon_widget.xml
@@ -9,8 +9,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        android:paddingBottom="13dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="13dp"
         android:text="@string/enter_coupon_promo_code"
-        android:textSize="16sp"
+        android:textSize="15sp"
         app:textStyle="normal" />
 
     <LinearLayout
