--- a/project/src/main/res/layout/widget_checkout_base.xml
+++ b/project/src/main/res/layout/widget_checkout_base.xml
@@ -86,7 +86,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:linksClickable="true"
-                android:padding="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="1.5dp"
+                android:paddingRight="1.5dp"
+                android:paddingTop="16dp"
                 android:textSize="10sp" />
 
             <Space
